Remove explicit test config for different GCs